# s45-ai

./: .env.example  .gitignore  README.md  implementation_prompts.md  improvement_prompts.md  main.py  pyproject.toml
data/raw_data/: raw_g1_001.txt  raw_g1_002.txt  raw_g1_003.txt  raw_g1_004.txt  raw_g1_005.txt  raw_g1_006.txt  raw_g1_007.txt  raw_g1_008.txt  raw_g2_001.txt  raw_g2_002.txt  raw_g2_003.txt  raw_g2_004.txt  raw_g2_005.txt  raw_g3_001.txt  raw_g3_002.txt  raw_g3_003.txt  raw_g3_004.txt  raw_g3_005.txt  raw_g4_001.txt  raw_g4_002.txt  raw_g4_003.txt  raw_g4_004.txt  raw_g4_005.txt  raw_g4_006.txt  raw_g4_007.txt
doc/: ASCC-system-design.md
outputs/: capital_timeline.csv  capital_timeline.json
prompts/: classification_prompt.txt  extraction_prompt.txt
src/: __init__.py  classifier.py  extractor.py  ingestion.py  llm_client.py  models.py  pipeline.py  timeline_builder.py  utils.py  validator.py
src/documents/: __init__.py  filename_hints.py  ingestion_profile.py  routing.py
src/io/: __init__.py  formats.py
src/s45_ai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_pipeline.py
